# TASK-req_254aad285031

./: metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  run_tests.sh
repo/.github/workflows/: ci.yml
repo/API_tests/: Cargo.toml  run.sh  test_audit.sh  test_auth.sh  test_catalog_search.sh  test_health.sh  test_offline.sh  test_rbac.sh  test_reviews.sh  test_warehouse_history.sh
repo/API_tests/src/: lib.rs
repo/API_tests/tests/: audit.rs  auth.rs  bin_create_history.rs  catalog.rs  catalog_browse_and_filters.rs  catalog_filter_edges.rs  contract_admin.rs  contract_audit_and_face.rs  contract_auth_session.rs  contract_catalog.rs  contract_forum.rs  contract_internships.rs  contract_warehouse.rs  contract_workorders.rs  endpoint_smoke.rs  fe_be_paths.rs  forum_visibility.rs  health.rs  lockout_policy.rs  rbac.rs  rbac_matrix.rs  rbac_roles.rs  review_lifecycle.rs  reviews.rs  session_revocation.rs  strict_mode.rs
repo/backend/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  docker-entrypoint.sh
repo/backend/src/: config.rs  crypto.rs  db.rs  logging.rs  main.rs  warehouse_audit.rs
repo/backend/src/audit/: mod.rs
repo/backend/src/auth/: guard.rs  lock.rs  mod.rs  password.rs  session.rs
repo/backend/src/face/: mod.rs
repo/backend/src/forum/: mod.rs  moderation.rs  visibility.rs
repo/backend/src/internships/: mod.rs
repo/backend/src/repositories/: mod.rs  users.rs
repo/backend/src/routes/: auth.rs  health.rs  mod.rs
repo/backend/src/routes/admin/: teams.rs  users.rs
repo/backend/src/routes/audit/: events.rs
repo/backend/src/routes/catalog/: availability.rs  categories.rs  mod.rs  services.rs  tags.rs
repo/backend/src/routes/face/: records.rs
repo/backend/src/routes/forum/: boards.rs  comments.rs  mod.rs  posts.rs  zones.rs
repo/backend/src/routes/internships/: attachments.rs  dashboard.rs  mod.rs  plans.rs  reports.rs
repo/backend/src/routes/warehouse/: bins.rs  mod.rs  warehouses.rs  zones.rs
repo/backend/src/routes/workorders/: images.rs  mod.rs  orders.rs  reputation.rs  reviews.rs
repo/backend/src/services/: mod.rs
repo/backend/src/workorders/: mod.rs
repo/config/: config.example.toml
repo/db/: schema.sql
repo/e2e/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  run.sh
repo/e2e/tests/: admin.spec.ts  auth.spec.ts  catalog.spec.ts  forum.spec.ts  helpers.ts  navigation.spec.ts  warehouse.spec.ts  work-orders.spec.ts
repo/frontend/: Cargo.toml  Dioxus.toml  Dockerfile  nginx.conf
repo/frontend/src/: auth.rs  main.rs  router.rs
repo/frontend/src/api/: catalog.rs  client.rs  face.rs  forum.rs  internships.rs  mod.rs  warehouse.rs  workorders.rs
repo/frontend/src/components/: layout.rs
repo/frontend/src/pages/: admin.rs  catalog.rs  face.rs  forum.rs  home.rs  internship.rs  login.rs  mod.rs  warehouse.rs  work_orders.rs
repo/frontend_core/: Cargo.toml
repo/frontend_core/src/: api_paths.rs  auth_state.rs  compare.rs  lib.rs  nav.rs  rating.rs  route.rs  search.rs  tag_selection.rs  url.rs
repo/frontend_core/tests/: workflow.rs
repo/frontend_tests/: Cargo.toml
repo/frontend_tests/src/: lib.rs
repo/frontend_tests/tests/: catalog_structure.rs  home_nav_structure.rs  pages_structure.rs
repo/shared/: Cargo.toml
repo/shared/src/: audit.rs  auth.rs  catalog.rs  face.rs  forum.rs  internships.rs  lib.rs  roles.rs  warehouse.rs  workorders.rs
repo/unit_tests/: Cargo.toml  run.sh
repo/unit_tests/src/: lib.rs
repo/unit_tests/tests/: dto_serde.rs  enums.rs  roles.rs
