[package]
name = "api_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "multipart"] }

[dev-dependencies]
frontend_core = { path = "../frontend_core" }
