[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
shared = { path = "../shared" }
