[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
gloo-net = "0.5"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["File", "FileList", "FormData", "HtmlInputElement"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
frontend_core = { path = "../frontend_core" }
# uuid 1.23 requires a randomness source on wasm32; `js` wires through
# web-sys crypto for browser-side UUID generation used by deep-link flows.
uuid = { version = "1", features = ["js"] }
