[package]
name = "unit_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
